--- a/hw2/package.json
+++ b/hw2/package.json
@@ -4,6 +4,7 @@
   "description": "Homework for the CU Universal Compiler class",
   "main": "app/parserRunner.js",
   "dependencies": {
+    "string-table": "^0.1.5",
     "winston": "^2.2.0"
   },
   "devDependencies": {
