ready for hw7 submit

--- a/LL1/package.json
+++ b/LL1/package.json
@@ -4,6 +4,7 @@
   "description": "Homework for the CU Universal Compiler class",
   "main": "app/parserRunner.js",
   "dependencies": {
+    "n-readlines": "^0.2.7",
     "string-table": "^0.1.5",
     "winston": "^2.2.0"
   },
