one more example away from submit for 10

--- a/LL1/package.json
+++ b/LL1/package.json
@@ -5,6 +5,7 @@
   "main": "app/parserRunner.js",
   "dependencies": {
     "n-readlines": "^0.2.7",
+    "singly-linked-list": "^0.2.7",
     "string-table": "^0.1.5",
     "winston": "^2.2.0"
   },
